--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mysql2": "^3.6.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "dotenv":"^16.4.5"
+    "dotenv":"^16.4.5",
+    "multer":"^1.4.5-lts.1"
   }
 }
